<resources>
    <string name="app_name">Waste Marche</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_transportation">Transportation</string>
    <string name="drawer_consultation">Consultation</string>
    <string name="drawer_bidding">Bidding</string>
    <string name="drawer_disposeWaste">Dispose Waste</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_region">Region: Egypt</string>
    <string name="drawer_messages">Messages</string>
    <string name="drawer_about">About us</string>
    <string name="drawer_contact">Contact us</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_send">Send</string>
    <string name="button_save">Save</string>
    <string name="button_english">English</string>
    <string name="button_arabic">عربى</string>
    <string name="button_login">Login</string>
    <string name="button_register">Sign up</string>
    <string name="button_alreadyMember">Already member | Login</string>
    <string name="button_newUser">New user | Sign up</string>
    <string name="button_clickHere">Click Here</string>
    <string name="button_requestConsultation">Request Consultation</string>
    <string name="button_sell">Post Item</string>
    <string name="button_buy">Get Items</string>
    <string name="button_myItems">My Items</string>
    <string name="button_myProposals">My Proposals</string>
    <string name="button_sendOffer">Send Offer</string>
    <string name="button_requestExtraInfo">Request Extra Info</string>
    <string name="button_all">All</string>
    <string name="button_issue">Issue</string>
    <string name="button_accept">Accept</string>
    <string name="button_deny">Deny</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_cPassword">Confirm Password</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_name">Name</string>
    <string name="hint_summary">Summary</string>
    <string name="hint_content">Content</string>
    <string name="hint_title">Title</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_unit">Uint</string>
    <string name="hint_packaging">Packaging</string>
    <string name="hint_price">Price</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_message">Message</string>
    <string name="hint_currency">Currency</string>
    <string name="hint_payment_temrs">Payment Terms</string>
    <string name="hint_offer_validity">Offer Validity</string>
    <string name="hint_description">Description</string>
    <string name="hint_pickupAddress">Pickup Address</string>
    <string name="hint_deliveryAddress">Delivery Address</string>
    <string name="hint_validationCode">Code</string>

    <string name="text_createdAt">Created at</string>
    <string name="text_updatedAt">Updated at</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>

    <string name="alert_done">Action Completed</string>
    <string name="alert_failed">Something went wrong</string>

    <string name="text_location">Location</string>
    <string name="text_transportation">Transportation</string>
    <string name="text_method">Method</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_description">Description</string>
    <string name="text_title">Title</string>
    <string name="text_category">Category</string>
    <string name="text_contact">Contact</string>
    <string name="text_content">Content</string>
    <string name="text_packaging">Packaging</string>
    <string name="text_specs">Specifications</string>
    <string name="text_price">Price</string>
    <string name="text_additionalComments">Additional requirements / comments</string>
    <string name="text_offer">Offer</string>
    <string name="text_dateOfProposal">Date of proposal</string>
    <string name="text_reply">Reply</string>
    <string name="text_paymentTerms">Payment Terms</string>
    <string name="text_status">Status</string>

    <string name="register_terms">I have read and agree to terms and conditions</string>

    <string name="forgotPassword_header">Forgot Password</string>
    <string name="forgotPassword_content">If you have forgotten your password, u can resest it here</string>

    <string name="validateAccount_header">Verify Accout</string>
    <string name="validateAccount_content">We have sent a tmeporary verification code to this number. </string>

    <string name="sell_cameraButton">Take a picture</string>
    <string name="sell_galleryButton">Choose a picture</string>

    <string name="requestTransportation_header">Create Transport Request</string>

    <string name="transportation_disposeWaste">Dispose Waste</string>
    <string name="transportation_transportWaste">Transport Waste</string>

    <string name="tab_home">Home</string>
    <string name="tab_myItems">My Items</string>
    <string name="tab_sell">Sell</string>
    <string name="tab_myProposals">My Proposals</string>
    <string name="tab_buy">Buy</string>

</resources>
