<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/home_tab"
        android:icon="@mipmap/splash"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/my_items_tab"
        android:icon="@drawable/my_items_icon"
        android:title="@string/tab_myItems" />

    <item
        android:id="@+id/sell_tab"
        android:icon="@drawable/sell_icon"
        android:title="@string/tab_sell" />

    <item
        android:id="@+id/my_proposals_tab"
        android:icon="@drawable/my_proposals_icon"
        android:title="@string/tab_myProposals" />

    <item
        android:id="@+id/buy_tab"
        android:icon="@drawable/buy_icon"
        android:title="@string/tab_buy" />
</menu>