<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/view_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <Button
        android:id="@+id/takePictureButton"
        android:text="@string/sell_cameraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/choosePictureButton"
        android:text="@string/sell_galleryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>