<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".ui.activities.intro.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/intro_background" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textPersonName"
            android:hint="@string/hint_name"
            android:id="@+id/nameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:inputType="phone"
            android:hint="@string/hint_mobile"
            android:id="@+id/mobileTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:inputType="textPassword"
            android:hint="@string/hint_cPassword"
            android:id="@+id/confirmPasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:layout_marginBottom="20dp"/>

        <Spinner
            android:background="@drawable/round_corners"
            android:layout_marginBottom="20dp"
            android:id="@+id/companyTpeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:buttonTint="@color/wmGreen"
            android:text="@string/register_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="onRegisterButtonClicks"
            android:textColor="#FFFFFF"
            android:text="@string/button_register"
            android:background="@drawable/solid_round_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="onLoginButtonClicks"
            android:textColor="@color/wmGreen"
            android:text="@string/button_alreadyMember"
            android:background="@color/wmClear"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>