<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.main.SellFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/imagesRecyclerView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="horizontal" />

            <ImageButton
                android:id="@+id/addImageButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/add_image" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/wmGreen"
            android:padding="16dp"
            android:text="@string/text_category"
            android:textColor="@color/wmWhite" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/round_corners" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/wmGreen"
            android:padding="16dp"
            android:text="@string/text_method"
            android:textColor="@color/wmWhite" />

        <Spinner
            android:id="@+id/method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/round_corners" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmGreen"
            android:padding="16dp"
            android:text="@string/text_description"
            android:textColor="@color/wmWhite" />

        <EditText
            android:inputType="textPersonName"
            android:hint="@string/hint_title"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/wmExtraLightGreen" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_summary"
            android:inputType=""
            android:lines="4"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_content"
            android:inputType=""
            android:lines="4"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmGreen"
            android:padding="16dp"
            android:text="@string/text_contact"
            android:textColor="@color/wmWhite" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmGreen"
            android:padding="16dp"
            android:text="@string/text_specs"
            android:textColor="@color/wmWhite" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_quantity"
            android:inputType="numberDecimal"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_unit"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <LinearLayout
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/text_transportation"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:buttonTint="@color/wmExtraLightGreen"
                android:id="@+id/transportation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/packaging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_packaging"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wmExtraLightGreen"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/light_solid_round_corners"
                android:text="@string/button_cancel"
                android:textColor="@color/wmWhite" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/solid_round_corners"
                android:text="@string/button_save"
                android:textColor="@color/wmWhite" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>