<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.drawer.TransportationFragment">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_bar" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/allButton"
            android:layout_weight="1"
            android:text="@string/button_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/trasnportButton"
            android:layout_weight="1"
            android:text="@string/transportation_transportWaste"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/disposeButton"
            android:layout_weight="1"
            android:text="@string/transportation_disposeWaste"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Button
            android:layout_weight="1"
            android:id="@+id/issueButton"
            android:text="@string/button_issue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <ListView
        android:id="@+id/transportListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>